[tool.black]
line-length = 79

[tool.poetry]
name = "minecraft-convert-local-player"
version = "0.0.1"
description = "Convert Minecraft Bedrock local player to network player"
authors = ["Colin Watson <cjwatson@chiark.greenend.org.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
bedrock = {git = "https://github.com/BluCodeGH/bedrock"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
